<resources>
    <string name="app_name">ScoreBoard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="venue">Ground Name</string>
    <string name="match_list">Match List</string>
    <string name="newMatch">New Match</string>
    <string name="scoring">score</string>
    <string name="extended_fab_content_desc">Save Team</string>
    <string name="top_players">Top Players</string>
    <string name="save_button_txt">Save Team</string>
    <string name="add_team_information">Add Team Information:</string>
    <string name="select_a_logo">Select A Team Logo</string>
    <string name="start_scoring">Start Scoring</string>
    <string name="toss_won_by">Toss won by</string>
    <string name="select_over">Select over</string>
    <string name="name_of_ur_cricket_ground">Ground or Field name</string>
    <string name="add_team">Add Team</string>
    <string name="start_a_new_match">Start A New Match</string>
    <string name="bat_first">Bat First</string>
    <string name="player_image">player Image</string>
    <string name="over_played">Over Played</string>
    <string name="total_score">Total Score</string>
    <string name="over">Over :</string>
    <string name="score">Score</string>
    <string name="team_name">Team Name</string>
    <string name="batsman">Batsman:</string>
    <string name="r">R</string>
    <string name="b">B</string>
    <string name="_4_s">4\'s</string>
    <string name="_6_s">6\'s</string>
    <string name="out">Out</string>
    <string name="wide">wide</string>
    <string name="lb">LB</string>
    <string name="nb">NB</string>
    <string name="bowler">Bowler</string>
    <string name="byeRun">BYE</string>
    <string name="one">+1</string>
    <string name="two">+2</string>
    <string name="three">+3</string>
    <string name="four">+4</string>
    <string name="six">+6</string>
    <string name="teamimage">teamImage</string>
    <string name="teamImage">team image</string>
    <string name="image_content">image_content</string>

    <string-array name="formats">
        <item>T10</item>
        <item>12-over</item>
        <item>15-over</item>
        <item>T20</item>
        <item>T25</item>
        <item>ODI(50)</item>
    </string-array>

</resources>