<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/matchListFragment"
        android:enabled="true"
        android:title="@string/match_list"
        android:icon="@drawable/ic_cricket"/>

    <item
        android:id="@+id/newMatchFragment"
        android:enabled="true"
        android:title="@string/newMatch"
        android:icon="@drawable/ic_add_task_black_24dp"/>

    <item
        android:id="@+id/scoringFragment"
        android:title="@string/scoring"
        android:enabled="true"
        android:icon="@drawable/ic_scoreboard"/>
    <item
        android:id="@+id/topPlayersFragment"
        android:enabled="true"
        android:title="@string/top_players"
        android:icon="@drawable/ic_ball"/>
</menu>