<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewmodel"
            type="com.example.scoreboard.viewmodels.MatchViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/themeB2">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/themeB2"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="40dp"
                android:padding="8dp"
                android:src="@drawable/arrow_back"
                android:layout_height="match_parent"
                app:tint="@color/buttons"
                android:contentDescription="@string/image_content" />
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="center"
                app:contentScrim="?attr/colorSurface"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="?attr/colorSurface"
                app:title="@string/add_team_information"
                app:titleEnabled="true">
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <ImageView
                android:id="@+id/icon_team"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_cricket__red_ball" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/team_name_txt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:hint="team name"
                android:textColorHint="#1C1616"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_team"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="team name"
                    android:inputType="text"
                    android:textColor="#0B7168"
                    android:textColorHint="#0B7168"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/imageSelectorCv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:elevation="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/themeB2"
                app:layout_constraintBottom_toTopOf="@+id/player_name_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/team_name_txt">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/teamLogo"
                        android:layout_width="71dp"
                        android:layout_height="69dp"
                        android:elevation="6dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_group" />
                    <TextView
                        android:id="@+id/logoTitleText"
                        android:layout_width="0dp"
                        android:layout_height="18dp"
                        android:textAlignment="center"
                        android:text="@string/select_a_logo"
                        android:layout_marginHorizontal="4dp"
                        android:textColor="#0B7168"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/teamLogo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/icon_player"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_cricket__3_batsman" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/player_name_txt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="4dp"
                android:hint="player name"
                app:hintTextColor="#0B7168"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
                app:layout_constraintStart_toEndOf="@+id/icon_player"
                app:layout_constraintTop_toTopOf="@+id/icon_player">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/player_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="70dp"
                android:layout_height="58dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#FFC107"
                android:text="ADD"
                android:textAlignment="textStart"
                android:textColor="#0B7168"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/player_name_txt"
                app:strokeColor="#009688" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/themeB2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/player_list_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/player_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/save_tram_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="55dp"
            android:backgroundTint="@color/buttons"
            android:drawableEnd="@drawable/ic_group_add_black_24dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/save_button_txt"
            android:textColor="#0B5951"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>